@startuml
'https://plantuml.com/class-diagram

abstract class NhanVienF88{
    String ten, chucvu
    int hanMucDuyetVay
    +{abstract} void duyetVay(int khoanVay)
    +{abstract} NhanVienF88 successor(NhanVienF88 successor)
}
class ChuTich
class NhanVienChoVayF88

NhanVienF88 <|-- ChuTich
NhanVienF88 <|-- NhanVienChoVayF88
NhanVienChoVayF88 --> NhanVienF88: successor

@enduml